--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 	<meta charset = "UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title> Marvel Gifs</title>
-	<!-- <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
@@ -13,8 +12,8 @@
 <body>
 
 <header>
-    <div class="container">
-        <div class = "row" id="header">
+    <div class="container" id="header">
+        <div class = "row" >
         	<div class="col-md-3 inlineBlock">
         		<img src="assets/images/giphy-logo-3.gif" class="headerImage inlineBlock">
         	</div>
@@ -52,15 +51,15 @@
 	</div>
 </main>
 
-<footer>
+<!-- <footer>
 	<div class="container text-center" id='footer'>
 		<div class="row">
 			<div class="col-md-12">
-				Copyright &copy; AshaTad 2017
+				Copyright &copy; Asha Tad  2017
 			</div>	
 		</div>
 	</div>   
-</footer>
+</footer> -->
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="assets/javascript/app.js"></script>
