search button functioning

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 <header>
     <div class="container" id="header">
         <div class = "row" >
-        	<div class="col-md-3 inlineBlock">
-        		<img src="assets/images/giphy-logo-3.gif" class="headerImage inlineBlock">
+        	<div class="col-md-3 inline-block">
+        		<img src="assets/images/giphy-logo-3.gif" class="img-header inline-block">
         	</div>
-        	<div class="col-md-6 inlineBlock">
+        	<div class="col-md-6 inline-block">
             	<h1 id="heading" onClick="window.location.reload()">
             	Marvel-lous Giphs ! </h1>
             	<h5 id="subheading"> Click Buttons To Display Gifs! &nbsp;&nbsp;Click Gifs to Play/Pause!
             	 </h5>
             </div>
-	         <div class="col-md-3 inlineBlock">
+	         <div class="col-md-3 inline-block">
 		        <form role="search">
 		        <div class="input-group search-form">
 		            <input type="text" class="form-control" 
@@ -41,7 +41,7 @@
 </header>
 
 <main>   
-	<div class="container">
+	<div class="container" id="main-content">
 		<div class="row">
 			<div class="col-md-12" id="button-holder"></div>		
 		</div>
